--- a/Public/Dashboard/InsuranceScheme/applicationIdentity.html
+++ b/Public/Dashboard/InsuranceScheme/applicationIdentity.html
@@ -5,7 +5,7 @@
 <html>
 <body>
   <form action="appplicationAddress.html" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
-  <h1>Application Form for National Pension Scheme</h1>
+  <h1>Application Form for National Life Insurance Scheme</h1>
   <h2>2.Identity Proof Details(Any one of the documents need to be provided along with the identification number)*</h2>
   <table border="0" cellpadding="3" cellspacing="0">
     <script type="text/javascript" >
