--- a/Public/Dashboard/InsuranceScheme/applicationPersonal.html
+++ b/Public/Dashboard/InsuranceScheme/applicationPersonal.html
@@ -19,7 +19,7 @@
   if (frm.Phone.value == "") { alert('Phone is required.'); frm.Phone.focus(); return false; }
   return true; }
   </script>
-  <h1>Application Form for National Pension Scheme</h1>
+  <h1>Application Form for National Life Insurance Scheme</h1>
   <h2>1.Personal Details</h2>
   <table border="0" cellpadding="3" cellspacing="0">
   <tr>
