--- a/Public/Dashboard/InsuranceScheme/applicationWorkBank.html
+++ b/Public/Dashboard/InsuranceScheme/applicationWorkBank.html
@@ -7,7 +7,7 @@
   <form action="//submit.form" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
   <script src="applicationWorkBank.js">
   </script>
-  <h1>Application Form for National Pension Scheme</h1>
+  <h1>Application Form for National Life Insurance Scheme</h1>
   <h2>1.Occupation And Bank Details</h2>
   <table border="0" cellpadding="3" cellspacing="0">
 
