--- a/forum_home.html
+++ b/forum_home.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -14,11 +8,11 @@ and open the template in the editor.
   <body background="forum.jpg">
   <a style="padding-left: 30px;padding-top: 30px;" href="forum_ask.html"><button style=" padding-right: 30px;padding-bottom: 20px;padding-left: 30px;padding-top: 20px;heigth: 100px; width: 160px; color : white; background-color : #0d71e2;" type="button" name="button">Ask a Question</button></a>
 <br>
-  <select style="margin-top:20px" onchange="location = this.value;">
+  <select style="margin-top:20px" onchange="location = this.value;" >
   <option >Quick Access</option>
   <option value="forum_ask.html">Compose Question</option>
-  <option value="#">Forum Home</option>
-  <option value="chatassis.html">Chat Assistant</option>
+  <option value="#">Forum Home</a></option>
+  <option value="chatassis.html"><a href="">Chat Assistant</option>
   <option value="index.html">Frequently Asked Questions</option>
 </select>
 <div class="pref">
@@ -40,6 +34,28 @@ and open the template in the editor.
 
 <div  id="wrapper">
   <div id="topusers">
+    <table width="300px" height="400px">
+      <tr>
+        <th ><h3 style=" color:#40506b;fonttext-align:center;">Top Contributors</h3>  </th>
+      </tr>
+      <tr>
+         <td>BLANK</td>
+      </tr>
+      <tr>
+          <td>BLANK</td>
+      </tr>
+      <tr>
+        <td>BLANK</td>
+      </tr>
+      <tr>
+        <td>BLANK</td>
+      </tr>
+
+        <tr>
+          <td>BLANK</td>
+        </tr>
+
+    </table>
     <br>
     <br>
     <br>
@@ -49,6 +65,8 @@ and open the template in the editor.
   </div>
   <div id="threads">
     <!-- <br>  Contents will go in here , Will contain Thread conetents obtained form the database -->
+
+
     <br>
     <br>
     <br>
@@ -66,6 +84,12 @@ and open the template in the editor.
     <br>
     <br>
     <br>
+    <div class="rtext">
+
+    <h3>Reply: <input class="reply" type="text" name="" value=""></h3>
+    </div>
+
+
     <br>
     <br>
     <br>
@@ -103,4 +127,3 @@ and open the template in the editor.
 
   </body>
 </html>
-
