--- a/Public/Dashboard/InsuranceScheme/appplicationAddress.html
+++ b/Public/Dashboard/InsuranceScheme/appplicationAddress.html
@@ -5,7 +5,7 @@
 <html>
 <body>
   <form action="applicationWorkBank.html" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
-  <h1>Application Form for National Life Insurance Scheme</h1>
+  <h1>Application Form for National Life Insurance+ Scheme</h1>
   <h2>3.ADDRESS DETAILS*</h2>
   <h3>3.1 CORRESPONDENCE ADDRESS DETAILS*</h3>
   <table border="0" cellpadding="3" cellspacing="0">
