commit latest for chatassis

--- a/Public/Dashboard/Forum/chatassis.html
+++ b/Public/Dashboard/Forum/chatassis.html
@@ -44,6 +44,7 @@
       <input placeholder="Type a message" style=" font-size: 20px;height: 35px;width: 550px;"type="text" name="" value="">
       <button class="w3-button w3-xlarge w3-circle w3-teal">Send</button>
     </div>
+    <center><a href="forum_home.html"><h3 style="color: white;">Back to Forums Page</h3></a> </center>
 
   </body>
 </html>
