--- a/Public/Dashboard/Forum/forum_home.html
+++ b/Public/Dashboard/Forum/forum_home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="forum_style.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Forum Home Page</title>
   </head>
   <body background="forum.jpg">
@@ -84,9 +85,13 @@
     <br>
     <br>
     <br>
-    <div class="rtext">
+    <!-- <div class="rtext">
 
     <h3>Reply: <input class="reply" type="text" name="" value=""></h3>
+    </div> -->
+    <div class="reply_space">
+      <input placeholder="Type a reply" style=" font-size: 20px;height: 35px;width: 550px;"type="text" name="" value="">
+      <button class="w3-button w3-xmedium w3-circle w3-black">Reply</button>
     </div>
 
 
